# observatory

./: .gitignore  .travis.yml  README.md  build.gradle  settings.gradle
application/: build.gradle
application/src/main/java/de/hhu/bsinfo/infinibench/app/: Config.java  (+2 more)
application/src/main/resources/: config.json  log4j2.xml
benchmark/: build.gradle
benchmark/src/main/java/de/hhu/bsinfo/infinibench/: InfiniBench.java
benchmark/src/main/java/de/hhu/bsinfo/observatory/: Observatory.java
benchmark/src/main/resources/: banner.txt
config/: disni.json  jverbs.json  neutrino.json
cpp/: .gitignore  CMakeLists.txt  README.md  build.sh  config.json
cpp/cmake/: CMakeLists.txt
cpp/cmake/application/: CMakeLists.txt
cpp/cmake/benchmark/: CMakeLists.txt
cpp/cmake/bindings/dummy-binding/: CMakeLists.txt
cpp/cmake/bindings/socket-binding/: CMakeLists.txt
cpp/cmake/bindings/verbs-binding/: CMakeLists.txt
cpp/cmake/observatory/: CMakeLists.txt
cpp/cmake/socket-binding/: CMakeLists.txt
cpp/cmake/verbs-binding/: CMakeLists.txt
cpp/src/application/: Application.cpp  args.hxx
cpp/src/application/util/: LoggingLayout.cpp  LoggingLayout.h  SocketAddressConverter.cpp  SocketAddressConverter.h
cpp/src/benchmark/: Benchmark.cpp  Benchmark.h  BuildConfig.cpp  BuildConfig.h  Observatory.cpp  Observatory.h
cpp/src/benchmark/operation/: BidirectionalThroughputOperation.h  LatencyOperation.h  MessagingLatencyOperation.h  MessagingPingPongOperation.h  MessagingThroughputOperation.h  Operation.h  RdmaLatencyOperation.h  RdmaReadLatencyOperation.cpp  RdmaReadLatencyOperation.h  RdmaReadThroughputOperation.cpp  RdmaReadThroughputOperation.h  RdmaThroughputOperation.cpp  RdmaThroughputOperation.h  RdmaWriteLatencyOperation.h  RdmaWriteThroughputOperation.cpp  RdmaWriteThroughputOperation.h  ThroughputOperation.h
cpp/src/benchmark/phase/: BenchmarkPhase.h  CleanupPhase.cpp  ConnectionPhase.cpp  ConnectionPhase.h  FillReceiveQueuePhase.cpp  FillReceiveQueuePhase.h  InitializationPhase.cpp  OperationPhase.cpp  OperationPhase.h  PreparationPhase.cpp  WarmupPhase.cpp  WarmupPhase.h
cpp/src/benchmark/result/: LatencyMeasurement.cpp  LatencyMeasurement.h  LatencyStatistics.cpp  LatencyStatistics.h  Measurement.cpp  Measurement.h  OverheadMeasurement.cpp  OverheadMeasurement.h  Status.cpp  ThroughputMeasurement.cpp
cpp/src/benchmark/util/: BenchmarkFactory.cpp  BenchmarkFactory.h  OperationFactory.h  SocketAddress.h  Util.h  ValueFormatter.h
cpp/src/bindings/dummy-binding/: Benchmark.cpp  Benchmark.h  README.md
cpp/src/bindings/socket-binding/: Benchmark.h  README.md
cpp/src/bindings/verbs-binding/: Benchmark.cpp  Benchmark.h  ConnectionContext.cpp  ConnectionContext.h  ConnectionInformation.cpp  ConnectionInformation.h  MemoryRegionInformation.cpp  README.md
cpp/src/observatory/: Benchmark.cpp  Benchmark.h  BenchmarkPhase.cpp  BenchmarkPhase.h  BuildConfig.cpp  BuildConfig.h  Observatory.cpp  Observatory.h  Operation.h
cpp/src/observatory/operation/: BidirectionalThroughputOperation.cpp  BidirectionalThroughputOperation.h  LatencyOperation.cpp  LatencyOperation.h  MessagingLatencyOperation.cpp  MessagingLatencyOperation.h  MessagingPingPongOperation.cpp  MessagingPingPongOperation.h  MessagingThroughputOperation.cpp  MessagingThroughputOperation.h  Operation.cpp  Operation.h  RdmaLatencyOperation.cpp  RdmaReadLatencyOperation.h  RdmaReadThroughputOperation.cpp  RdmaReadThroughputOperation.h  RdmaThroughputOperation.cpp  RdmaThroughputOperation.h  RdmaWriteLatencyOperation.cpp  RdmaWriteLatencyOperation.h  RdmaWriteThroughputOperation.h  ThroughputOperation.cpp  ThroughputOperation.h
cpp/src/observatory/phase/: BenchmarkPhase.cpp  BenchmarkPhase.h  CleanupPhase.cpp  CleanupPhase.h  ConnectionPhase.cpp  ConnectionPhase.h  FillReceiveQueuePhase.cpp  FillReceiveQueuePhase.h  InitializationPhase.cpp  InitializationPhase.h  OperationPhase.cpp  OperationPhase.h  PreparationPhase.cpp  PreparationPhase.h  WarmupPhase.cpp  WarmupPhase.h
cpp/src/observatory/result/: LatencyMeasurement.cpp  LatencyStatistics.cpp  LatencyStatistics.h  Measurement.cpp  Measurement.h  OverheadMeasurement.cpp  OverheadMeasurement.h  Status.h  ThroughputMeasurement.cpp  ThroughputMeasurement.h
cpp/src/observatory/util/: BenchmarkFactory.cpp  BenchmarkFactory.h  BenchmarkPhaseFactory.cpp  BenchmarkPhaseFactory.h  Factory.h  OperationFactory.cpp  OperationFactory.h  SocketAddress.cpp  SocketAddress.h  ValueFormatter.cpp  ValueFormatter.h
cpp/src/socket-binding/: Benchmark.cpp  Benchmark.h
cpp/src/verbs-binding/: Benchmark.cpp  Benchmark.h  ConnectionContext.cpp  MemoryRegionInformation.h
disni/: build.gradle
disni-binding/: build.gradle
example/: build.gradle
example/config/: config.json  disni.json  jucx.json  jverbs.json  netty.json  neutrino.json  nio.json  socket.json
example/config/cpp/ibverbs/: socket.json
example/config/cpp/socket/: config.json
example/config/java/: jucx.json  jverbs.json
gradle/wrapper/: gradle-wrapper.properties
java/: .gitignore  README.md  build.gradle  settings.gradle
java/application/: build.gradle
java/benchmark/: build.gradle
java/benchmark/src/main/resources/: banner.txt
java/bindings/: build.gradle
java/bindings/disni-binding/: README.md  build.gradle
java/bindings/dummy-binding/: README.md  build.gradle
java/bindings/jucx-binding/: README.md  build.gradle
java/bindings/jverbs-binding/: README.md  build.gradle
java/bindings/netty-binding/: README.md  build.gradle
java/bindings/neutrino-binding/: README.md  build.gradle
java/bindings/nio-binding/: README.md  build.gradle
java/bindings/socket-binding/: README.md  build.gradle
java/disni-binding/: build.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/jucx-binding/: build.gradle
java/jverbs-binding/: build.gradle
java/neutrino-binding/: build.gradle
java/socket-binding/: build.gradle
jverbs-binding/: build.gradle
neutrino-binding/: build.gradle
plot/: build.gradle
python/: .gitignore  plot.py
res/: architecture.drawio
socket/: build.gradle
(+172 files in other folders)
